# Tetris

./: .gitignore  CREDITS.md  Cargo.toml  Makefile  README.md  credits.md  credits.txt
asset/: icon.xcf  spritesheet.xcf
src/: algorithm.rs  board.rs  main.rs  math.rs  piece.rs
src/application/: mod.rs
src/application/asset/: audio.rs  mod.rs  texture.rs  typography.rs
src/application/event/: mod.rs
src/application/events/: mod.rs
src/application/geometry/: mod.rs
src/application/manager/: assets.rs  mod.rs  object.rs  sprite.rs
src/application/managers/: assets.rs  mod.rs  sprite.rs
src/application/render/: color.rs  mod.rs  text.rs
src/application/structure/: store.rs
src/application/tile/: tilemap.rs  tileset.rs
src/application/tiles/: tile.rs  tilemap.rs  tileset.rs
src/application/time/: mod.rs
src/application/utility/: container.rs  mod.rs  types.rs
src/constants/: board.rs  game.rs  mod.rs  piece.rs  shape.rs  window.rs
src/engine/: application.rs  mod.rs  subsystem.rs
src/engine/asset/: audio.rs  texture.rs  typography.rs
src/engine/event/: mod.rs
src/engine/geometry/: mod.rs
src/engine/manager/: assets.rs
src/engine/render/: color.rs  mod.rs  text.rs
src/engine/structure/: store.rs
src/engine/tile/: tile.rs  tilemap.rs  tileset.rs
src/engine/time/: mod.rs
src/engine/utility/: container.rs  random.rs  types.rs
